[gd_scene load_steps=20 format=3 uid="uid://3naivixtwygu"]

[ext_resource type="Script" uid="uid://v15r7g35qs3v" path="res://scripts/ui/menu_principal.gd" id="1_o0pl7"]
[ext_resource type="Texture2D" uid="uid://dye56mlahth6q" path="res://assets/sprites/backgrounds/background_menu.png" id="2_mqn46"]
[ext_resource type="Texture2D" uid="uid://c6swici34hih2" path="res://assets/sprites/backgrounds/title.png" id="3_kucxf"]
[ext_resource type="FontFile" uid="uid://bwcd3v12u8hfj" path="res://assets/font/Eagle_Lake/EagleLake-Regular.ttf" id="3_mqn46"]
[ext_resource type="FontFile" uid="uid://oh3y0widtpsb" path="res://assets/font/MedievalSharp/MedievalSharp-Regular.ttf" id="3_pq103"]
[ext_resource type="Texture2D" uid="uid://ohw1xn2s346g" path="res://assets/sprites/ui/buttons/button.png" id="4_pq103"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_0dla8"]
texture = ExtResource("3_kucxf")
texture_margin_left = 80.0
texture_margin_top = 30.0
texture_margin_bottom = 100.0
expand_margin_left = 70.0
expand_margin_top = 40.0
expand_margin_bottom = 40.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_s16su"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_ptpru"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 200.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_js3ya"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_d5fec"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_qj36n"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_waw0y"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_sirq2"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_3kwta"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_h4o44"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_mcy8y"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nt4t2"]
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_nt6gs"]
texture = ExtResource("4_pq103")
expand_margin_top = 20.0
expand_margin_bottom = 20.0

[node name="MenuPrincipal" type="Control"]
layout_mode = 3
anchor_left = -0.073
anchor_top = 0.219
anchor_right = 0.924
anchor_bottom = 1.0
offset_left = -2.84
offset_top = -110.52
offset_right = 84.616
offset_bottom = -2.60791
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
script = ExtResource("1_o0pl7")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -860.848
offset_top = -695.696
offset_right = 1059.15
offset_bottom = 584.304
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_mqn46")

[node name="Title" type="Label" parent="."]
layout_mode = 1
anchors_preset = -1
offset_left = 400.0
offset_top = -130.0
offset_right = 1800.0
offset_bottom = 320.0
theme_override_fonts/font = ExtResource("3_pq103")
theme_override_font_sizes/font_size = 90
theme_override_styles/normal = SubResource("StyleBoxTexture_0dla8")
text = "SKYRAGE "
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -300.848
offset_top = -140.304
offset_right = 499.152
offset_bottom = 259.696
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 39
alignment = 1

[node name="StartBTN" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mqn46")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_s16su")
theme_override_styles/pressed = SubResource("StyleBoxTexture_ptpru")
theme_override_styles/normal = SubResource("StyleBoxTexture_js3ya")
text = "START"
metadata/_edit_use_anchors_ = true

[node name="ParamBTN" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mqn46")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_d5fec")
theme_override_styles/pressed = SubResource("StyleBoxTexture_qj36n")
theme_override_styles/normal = SubResource("StyleBoxTexture_waw0y")
text = "PARAMÈTRES"

[node name="CreditBTN" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mqn46")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_sirq2")
theme_override_styles/pressed = SubResource("StyleBoxTexture_3kwta")
theme_override_styles/normal = SubResource("StyleBoxTexture_h4o44")
text = "CRÉDITS"

[node name="QuitBTN" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_mqn46")
theme_override_font_sizes/font_size = 30
theme_override_styles/hover = SubResource("StyleBoxTexture_mcy8y")
theme_override_styles/pressed = SubResource("StyleBoxTexture_nt4t2")
theme_override_styles/normal = SubResource("StyleBoxTexture_nt6gs")
text = "QUITTER"
metadata/_edit_use_anchors_ = true

[connection signal="button_down" from="VBoxContainer/StartBTN" to="." method="_on_start_btn_button_down"]
[connection signal="button_down" from="VBoxContainer/ParamBTN" to="." method="_on_param_btn_button_down"]
[connection signal="button_down" from="VBoxContainer/CreditBTN" to="." method="_on_credit_btn_button_down"]
[connection signal="button_down" from="VBoxContainer/QuitBTN" to="." method="_on_quit_btn_button_down"]
